[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senzu"
version = "0.1.0"
description = "Secret env sync for GCP teams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["gcp", "secrets", "env", "dotenv", "secret-manager"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic-settings>=2",
    "google-cloud-secret-manager>=2",
    "toml>=0.10",
    "python-dotenv>=1",
]

[project.scripts]
senzu = "senzu.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["senzu"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
