[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senzu"
version = "0.3.1"
description = "Secret env sync for GCP teams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "philip-730" }]
keywords = ["gcp", "secrets", "env", "dotenv", "secret-manager"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic-settings>=2",
    "google-cloud-secret-manager>=2",
    "toml>=0.10",
    "python-dotenv>=1",
]

[project.urls]
Homepage = "https://github.com/philip-730/senzu"

[project.scripts]
senzu = "senzu.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["senzu"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
